trying to update for node 20

--- a/plugins/lang-python/package.json
+++ b/plugins/lang-python/package.json
@@ -9,6 +9,6 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "skulpty": "git://github.com/codecombat/skulpty"
+    "skulpty": "git://github.com/reacheight/skulpty"
   }
 }
