--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "Esper javascript interperter.",
   "main": "src/index.js",
   "scripts": {
-    "doc": "esdoc -c esdoc.json",
-    "lint": "jshint src --show-non-errors",
+    "doc": "jsdoc -c jsdoc.json",
+    "lint": "eslint src",
     "test": "mocha",
     "repl": "node contrib/cli.js -i",
     "webpack": "webpack",
-    "demo": "esdoc -c esdoc.json && node contrib/examine-corpus.js && webpack && webpack --env.test && webpack --env.test --env.profile=modern && node contrib/ui.js",
-    "cover": "./node_modules/istanbul/lib/cli.js cover node_modules/.bin/_mocha -- --reporter dot",
-    "dev-server": "webpack-dev-server src/index.js --content-base contrib/ui",
+    "demo": "jsdoc -c jsdoc.json && node contrib/examine-corpus.js && webpack && webpack --env test && webpack --env test --env profile=modern && node contrib/ui.js",
+    "cover": "nyc mocha",
+    "dev-server": "webpack serve --content-base contrib/ui",
     "preinstall": "node contrib/install-plugin-deps.js",
-    "prepublish": "node contrib/build.js",
-    "style": "jscs src plugins/*/*.js test/*.js"
+    "prepare": "node contrib/build.js",
+    "style": "eslint src plugins/*/*.js test/*.js"
   },
   "bin": {
     "esper": "./contrib/cli.js"
@@ -46,50 +46,30 @@
     "contrib/install-plugin-deps.js",
     "plugin-list.js"
   ],
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-check-es2015-constants": "^6.22.0",
-    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
-    "babel-plugin-transform-es2015-block-scoped-functions": "^6.22.0",
-    "babel-plugin-transform-es2015-block-scoping": "^6.24.1",
-    "babel-plugin-transform-es2015-classes": "^6.24.1",
-    "babel-plugin-transform-es2015-computed-properties": "^6.24.1",
-    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
-    "babel-plugin-transform-es2015-for-of": "^6.23.0",
-    "babel-plugin-transform-es2015-function-name": "^6.24.1",
-    "babel-plugin-transform-es2015-literals": "^6.22.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
-    "babel-plugin-transform-es2015-object-super": "^6.24.1",
-    "babel-plugin-transform-es2015-parameters": "^6.24.1",
-    "babel-plugin-transform-es2015-shorthand-properties": "^6.24.1",
-    "babel-plugin-transform-es2015-spread": "^6.22.0",
-    "babel-plugin-transform-es2015-sticky-regex": "^6.24.1",
-    "babel-plugin-transform-es2015-template-literals": "^6.22.0",
-    "babel-plugin-transform-es2015-typeof-symbol": "^6.23.0",
-    "babel-plugin-transform-es2015-unicode-regex": "^6.24.1",
-    "babel-plugin-transform-regenerator": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-regenerator-runtime": "^6.5.0",
-    "babel-register": "^6.24.1",
-    "babel-runtime": "^6.23.0",
-    "chai": "^3.5.0",
-    "core-js": "^2.4.1",
-    "esdoc": "^0.5.2",
-    "istanbul": "^1.0.0-alpha.2",
-    "jscs": "^3.0.7",
-    "lodash": "^4.17.4",
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/plugin-transform-runtime": "^7.22.9",
+    "@babel/runtime": "^7.22.6",
+    "babel-loader": "^9.1.3",
+    "eslint": "^8.45.0",
+    "chai": "^4.3.7",
+    "core-js": "^3.31.1",
+    "jsdoc": "^4.0.2",
+    "nyc": "^15.1.0",
+    "lodash": "^4.17.21",
     "lua2js": "^0.0.11",
-    "mocha": "^6.1.2",
-    "mocha-loader": "^2.0.1",
-    "raw-loader": "^0.5.1",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "mocha": "^10.2.0",
+    "raw-loader": "^4.0.2",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "commander": "^2.9.0",
-    "esprima": "^4.0.0"
+    "commander": "^11.0.0",
+    "esprima": "^4.0.1"
   }
 }
