--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esper.js",
-  "version": "0.5.0-dev",
+  "version": "0.6.0",
   "description": "Esper javascript interperter.",
   "main": "src/index.js",
   "scripts": {
